# easy_blockchain

./: .gitignore  Dockerfile  README.md  core.py  docker-compose.yml  pyproject.toml  server.py
app/: core.py  server.py
app/models/: __init__.py
models/: models.py
