[tool.poetry]
name = "easy_blockchain"
version = "0.1.0"
description = "Learn blockchain"
authors = ["Aleksan <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
peewee = "^3.14.4"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
